feat: set minimum length for username
