# gen/http/openapi3.yaml
@@ -362,7 +362,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/CreateUserRequestBody'
+                          $ref: '#/components/schemas/AuthUserRequestBody'
                         example:
                             password: s3cr3t
                             username: alice
@@ -427,6 +427,23 @@ components:
             required:
                 - index
                 - unlocked
+        AuthUserRequestBody:
+          type: object
+          properties:
+            password:
+              type: string
+              description: Password
+              example: s3cr3t
+            username:
+              type: string
+              description: Username
+              example: alice
+          example:
+            password: s3cr3t
+            username: alice
+          required:
+            - username
+            - password
         AuthUserResponseBody:
             type: object
             properties:
@@ -504,6 +521,7 @@ components:
                     type: string
                     description: Username of the new user
                     example: alice
+                    minLength: 3
             example:
                 password: s3cr3t
                 username: alice
